rendered/envs/friclu/pihole/service-pihole-dns-udp.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pihole
    app.kubernetes.io/name: pihole
    chart: pihole-2.31.0
    heritage: Helm
    release: pihole
  name: pihole-dns-udp
  namespace: pihole
spec:
  externalTrafficPolicy: Local
  ports:
    - name: dns-udp
      port: 53
      protocol: UDP
      targetPort: dns-udp
  selector:
    app: pihole
    release: pihole
  type: NodePort
