rendered/envs/friclu/pihole/ingress-pihole.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: pihole
    chart: pihole-2.31.0
    heritage: Helm
    release: pihole
  name: pihole
  namespace: pihole
spec:
  ingressClassName: nginx
  rules:
    - host: pihole-friclu.duckdns.org
      http:
        paths:
          - backend:
              service:
                name: pihole-web
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - pihole-friclu.duckdns.org
      secretName: pihole-certificate
